// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tag Basic 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Error 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Icon Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--icon"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
          fillOpacity=".95"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Link 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <a
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
    href="https://duckduckgo.com/"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Tag Long Text 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Long Text With Icon 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon"
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
    <div
      className="psds-icon psds-icon--size-medium"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
          fillOpacity=".95"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--is-pressed"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--is-pressed"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed Link 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <a
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--is-pressed"
    href="#"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Tag Pressed With Icon 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon psds-tag--is-pressed"
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
          fillOpacity=".95"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Sizes 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-small"
    >
      <span
        className="psds-tag__label"
      >
        small
      </span>
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-medium"
    >
      <span
        className="psds-tag__label"
      >
        medium
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Sizes With Icons 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-small psds-tag--icon"
    >
      <span
        className="psds-tag__label psds-tag__label--icon"
      >
        small
      </span>
      <div
        className="psds-icon psds-icon--size-small"
        onClick={[Function]}
        style={
          Object {
            "cursor": "default",
          }
        }
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
            fillOpacity=".95"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon"
    >
      <span
        className="psds-tag__label psds-tag__label--icon"
      >
        medium
      </span>
      <div
        className="psds-icon psds-icon--size-medium"
        onClick={[Function]}
        style={
          Object {
            "cursor": "default",
          }
        }
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
            fillOpacity=".95"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Small Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-small"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Style Override 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
    style={
      Object {
        "background": "red",
      }
    }
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag With Icon Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--icon"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
          fillOpacity=".95"
        />
      </svg>
    </div>
  </div>
</div>
`;
